Revision history for Perl extension OrePAN2

{{$NEXT}}

0.48 2021-02-25T15:15:27Z
    - Switch from Parse::CPAN::Packages to Parse::CPAN::Packages::Fast (GH#57)
      (Olaf Alders)

0.47 2018-11-02T20:09:44Z
    - Move t/Util.pm and modernize Travis config (GH#50) (Olaf Alders)
    - rewrite 2 cases of autoderef. (GH#49) (Kang-min Liu)

0.46 2017-02-09T04:35:09Z
    - Process MetaCPAN lookup in chunks (E. Choroba).

0.45 2016-12-07T17:54:13Z

    - Update OrePAN2::Indexer::do_metacpan_lookup() to not do a search for
      modules if no releases are found. A recent MetaCPAN::Client change
      caused this search to return all modules if an empty arrayref was
      passed to it.
    - Upgrade to v1 of the MetaCPAN API.

0.44 2016-08-22T22:50:26Z
    - OrePAN2::Repository::gc() now optionally accepts an anonymous sub (Olaf Alders).

0.43 2016-07-30T15:41:31Z
    - Bump MetaCPAN::Client version to 1.021000 (Mickey Nasriachi)
    - Fix bug in arrayref handling of MetaCPAN results (Mickey Nasriachi)

0.42 2016-07-19T19:48:29Z
    - The cli injector now accepts an "author_subdir" option, which allows you
      to save a tarball to a subdirectory of an authors home directory (Seth
      Daniel).  https://github.com/tokuhirom/OrePAN2/pull/40 and
      https://github.com/tokuhirom/OrePAN2/pull/40

0.41 2016-06-24T18:50:00Z
    - Make 02packages sort order case insensitive (just like PAUSE). Reported
      by Tatsuhiko Miyagawa. https://github.com/tokuhirom/OrePAN2/issues/38

0.40 2015-07-14T21:34:16Z
    - Add previously documented but apparently never implemented "simple" flag
      to orepan2-indexer script (oalders)

0.39 2015-07-03T21:23:23Z
    - Globally enable dev versions (Chris Weyl).  See discussion at
      https://github.com/tokuhirom/OrePAN2/pull/36
    - Use a template for tempdir, for easier identification (Chris Weyl)

0.38 2015-03-19T03:24:55Z
    - Bump minimum version of Moo to avoid tester failures (oalders)

0.37 2015-03-18T02:51:18Z
