@@ -1,6 +1,7 @@
 Revision history for Perl extension OrePAN2
 
 {{$NEXT}}
+    - Add outdated-releases option to orepan2-audit (GH#58) (Olaf Alders)
 
 0.48 2021-02-25T15:15:27Z
     - Switch from Parse::CPAN::Packages to Parse::CPAN::Packages::Fast (GH#57)
